<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="name.agapoff.oresund.SaveLocationActivity">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/coord_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <TableRow android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_latitude"/>

        <TextView
            android:id="@+id/latitude_to_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </TableRow>
    <TableRow android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_longitude"/>

          <TextView
            android:id="@+id/longitude_to_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </TableRow>
    </TableLayout>


    <EditText
        android:id="@+id/location_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/coord_table"/>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_below="@+id/location_name"
        android:onClick="saveLocation"
        />
</RelativeLayout>
