<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="name.agapoff.oresund.HelpActivity"
    android:orientation="vertical" >
    <ScrollView android:id="@+id/ScrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="6dip"
            >
            <TextView
                android:id="@+id/help_page_intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_page_intro"
                android:padding="2dip"
                android:layout_weight="1"
                />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="4dip">

                <ImageView
                    android:id="@+id/help_img1"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:paddingTop="10dp"
                    android:src="@drawable/ic_compass2" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_text_section1"
                    android:padding="8dip"
                    android:layout_weight="1"
                    />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="4dip">

                <ImageView
                    android:id="@+id/help_img2"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:paddingTop="10dp"
                    android:src="@drawable/ic_coords" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_text_section2"
                    android:padding="8dip"
                    android:layout_weight="1"
                    />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="4dip">

                <ImageView
                    android:id="@+id/help_img3"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:paddingTop="10dp"
                    android:src="@drawable/ic_anchor" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_text_section3"
                    android:padding="8dip"
                    android:layout_weight="1"
                    />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="4dip">

                <ImageView
                    android:id="@+id/help_img4"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:paddingTop="10dp"
                    android:src="@drawable/ic_notebook" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_text_section4"
                    android:padding="8dip"
                    android:layout_weight="1"
                    />
            </LinearLayout>

            <View
                android:id="@+id/separator1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_below="@+id/viewpager"
                android:background="@color/material_blue_grey_800"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="4dip">

                <ImageView
                    android:id="@+id/help_logo"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:paddingTop="10dp"
                    android:src="@drawable/oresund" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:padding="8dip"
                    android:layout_weight="1"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_text_version"
                    android:layout_weight="1"
                    />
                <TextView
                    android:id="@+id/help_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>